--- a/MVVMGuia/MVVMGuia.Android/MVVMGuia.Android.csproj
+++ b/MVVMGuia/MVVMGuia.Android/MVVMGuia.Android.csproj
@@ -55,11 +55,15 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+    <PackageReference Include="Plugin.CurrentActivity">
+      <Version>2.1.0.4</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StatusBar\StatusBar.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -84,6 +88,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
+    <Folder Include="StatusBar\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MVVMGuia\MVVMGuia.csproj">
